--- a/style.css
+++ b/style.css
@@ -1,9 +1,48 @@
+body {
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.container {
+    margin-top: 150px;
+    padding: 10px 40px;
+    border: 2px solid #fff;
+    border-radius: 10px;
+}
+
+button {
+    text-align: center;
+    width: 60px;
+    height: 60px;
+    font-weight: bold;
+    font-size: 20px;
+    border: 0;
+    border-radius: 50%;
+    background-color: #ffffff;
+    color: #000;
+}
+
+button:nth-child(4) {
+    color: #fff;
+    background-color: #ec7f26;
+}
+
+#btn-clear {
+    width: 252px;
+    border-radius: 8px;
+}
+
+
 .result {
     display: flex;
+    overflow: hidden;
     align-items: center;
-    text-align: end;
-    width: 106px;
-    height: 30px;
-    background-color: #000;
-    color: #fff;
+    width: 252px;
+    height: 55px;
+    font-size: 30px;
+    border-radius: 10px;
+    background-color: #fff;
+    color: #222;
 }
