--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ button:nth-child(4) {
     width: 252px;
     height: 55px;
     font-size: 30px;
+    font-weight: bold;
     border-radius: 10px;
     background-color: #fff;
     color: #222;
